--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Pagina para mi amor</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Feliz Cumple Amor 💜</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hola Samai</h1>
+  <section class="hero">
+    <h1>Feliz cumpleaños, Joss 💜</h1>
+    <button id="enterButton">Entrar</button>
+  </section>
+
+  <section class="mensaje" id="mensaje">
+    <h2>Una carta para ti</h2>
+    <p>
+      Amor,<br><br>
+      Este es un regalito de cumple adelantado,
+      un pequeño detalle para que sepas lo especial que eres para mí
+      y la importancia que tienes en mi vida.
+  </section>
+
+  <section class="galeria">
+    <h2>Momentos juntos</h2>
+    <div class="fotos">
+      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.51.jpeg" alt="Foto 1">
+      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (1).jpeg" alt="Foto 2">
+      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (2).jpeg" alt="Foto 3">
+      <!-- Puedes añadir más -->
+    </div>
+  </section>
+
+  <section class="regalo">
+    <h2>Una sorpresa para ti 🎁</h2>
+    <button id="mostrarRegalo">Ver regalo</button>
+    <div id="contenidoRegalo" class="oculto">
+      <img src="Imagenes/WhatsApp Image 2025-05-25 at 19.42.17.jpeg" alt="Sorpresa">
+      <p>¡Disfruta tu regalito! 💕</p>
+    </div>
+  </section>
+
+  <section class="final">
+    <h2>Te amo mucho 💖</h2>
+    <canvas id="fuegosArtificiales"></canvas>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
