--- a/index.html
+++ b/index.html
@@ -24,15 +24,32 @@
       y la importancia que tienes en mi vida.
   </section>
 
-  <section class="galeria">
-    <h2>Momentos juntos</h2>
-    <div class="fotos">
+ <section class="galeria">
+  <div class="fotos">
+  <div class="tarjeta">
+    <div class="front">
       <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.51.jpeg" alt="Foto 1">
-      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (1).jpeg" alt="Foto 2">
-      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (2).jpeg" alt="Foto 3">
-      <!-- Puedes añadir más -->
     </div>
-  </section>
+    <div class="back">Me encanta verte feliz como si fueras una niña de nuevo 💕</div>
+  </div>
+
+  <div class="tarjeta">
+    <div class="front">
+      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (1).jpeg" alt="Foto 2">
+    </div>
+    <div class="back">El día favorito de mi vida ☀️</div>
+  </div>
+
+  <div class="tarjeta">
+    <div class="front">
+      <img src="Imagenes/WhatsApp Image 2025-05-26 at 13.23.54 (2).jpeg" alt="Foto 3">
+    </div>
+    <div class="back">Nuestro primer aniversario ✨</div>
+  </div>
+</div>
+
+</section>
+
 
   <section class="regalo">
     <h2>Una sorpresa para ti 🎁</h2>
