--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     <button id="enterButton">Entrar</button>
   </section>
 
-  <section class="mensaje" id="mensaje">
-    <h2>Una carta para ti</h2>
-    <p>
-      Amor,<br><br>
-      Este es un regalito de cumple adelantado,
-      un pequeño detalle para que sepas lo especial que eres para mí
-      y la importancia que tienes en mi vida.
-  </section>
+<section class="mensaje" id="mensaje">
+  <h2>Una carta para ti</h2>
+  <div class="sobre-container">
+    <div id="sobre">
+      <div class="solapa"></div>
+    </div>
+    <div id="papel">
+      <p>
+        Amor,<br><br>
+        Quise darte algo especial en este día tan tuyo. Gracias por ser mi luz, mi paz y mi alegría. Este mensajito guarda lo mucho que te amo 💖<br><br>
+        Feliz cumpleaños, Joss.
+      </p>
+    </div>
+  </div>
+</section>
+
 
  <section class="galeria">
   <div class="fotos">
@@ -62,7 +70,6 @@
 
   <section class="final">
     <h2>Te amo mucho 💖</h2>
-    <canvas id="fuegosArtificiales"></canvas>
   </section>
 
   <script src="script.js"></script>
