--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div id="papel">
       <p>
         Amor,<br><br>
-        Quise darte algo especial en este día tan tuyo. Gracias por ser mi luz, mi paz y mi alegría. Este mensajito guarda lo mucho que te amo 💖<br><br>
-        Feliz cumpleaños, Joss.
+        bla bla bla.
       </p>
     </div>
   </div>
