--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="papel">
       <p>
         Amor,<br><br>
-        bla bla bla.
+        aqui va a ir la carta sama pero ahorita no estoy muy inspirado pero
+        solo es una idea decime como ves ajskdjad.
       </p>
     </div>
   </div>
